--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
