--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
     "next": "13.4.19",
+    "popmotion": "^11.0.5",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-cookie": "^6.1.0",
