--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "10.4.15",
     "classnames": "^2.3.2",
     "delay": "^6.0.0",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-cookie": "^6.1.0",
     "react-dom": "18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.45.4",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.3",
