--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.6",
     "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3"
   }
