--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.45.4",
     "react-responsive-carousel": "^3.2.23",
+    "react-tooltip": "^5.21.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
