--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "delay": "^6.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "form-data": "^4.0.0",
     "framer-motion": "^10.16.1",
+    "mailgun.js": "^10.2.3",
     "next": "13.4.19",
     "popmotion": "^11.0.5",
     "postcss": "8.4.28",
