--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.45.4",
     "react-responsive-carousel": "^3.2.23",
     "react-tooltip": "^5.21.5",
+    "resend": "^4.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
