--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.7",
     "@types/react-gtm-module": "^2.0.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.7.9",
     "classnames": "^2.3.2",
     "delay": "^6.0.0",
     "eslint": "8.47.0",
