--- a/cms-backend/package.json
+++ b/cms-backend/package.json
@@ -4,36 +4,31 @@
   "private": true,
   "description": "A Strapi application",
   "scripts": {
-    "build": "tsc",
+    "build": "strapi build",
+    "deploy": "strapi deploy",
     "develop": "strapi develop",
-    "start": "node dist/index.js",
-    "clean": "rimraf dist",
-    "prestart": "npm run build"
+    "seed:example": "node ./scripts/seed.js",
+    "start": "strapi start",
+    "strapi": "strapi"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.10.2",
     "@strapi/plugin-users-permissions": "5.10.2",
     "@strapi/strapi": "5.10.2",
-    "better-sqlite3": "11.3.0",
-    "pg": "^8.13.3",
+    "fs-extra": "^10.0.0",
+    "mime-types": "^2.1.27",
+    "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {
-    "@strapi/typescript-utils": "^5.10.2",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
-  },
+  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
     "npm": ">=6.0.0"
   },
   "strapi": {
-    "uuid": "68d116a7-3170-498b-bc6b-975835c1f9df"
+    "uuid": "a1ee62ae-595a-49bc-8b41-f4126911a8eb"
   }
 }
