--- a/cms-backend/package.json
+++ b/cms-backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.10.2",
+    "@strapi/plugin-content-type-builder": "^4.25.12",
     "@strapi/plugin-users-permissions": "5.10.2",
     "@strapi/strapi": "5.10.2",
     "fs-extra": "^10.0.0",
