--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "@tailwindcss/forms": "^0.5.6",
     "prettier": "3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3"
+  },
+  "engines": {
+    "node": "^22.0.0"
   }
 }
